--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
+    background-color: black;
+
     width: 100%;
     height: 100%;
 
     margin: 0;
-
-    background-color: black;
 }
 
-#dvd-logo {
+#logo {
     position: absolute;
 }
